lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/Lead_Scan_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings and safeguards of the weekly lead scan.</description>
    <label>Lead Scan Setting</label>
    <pluralLabel>Lead Scan Settings</pluralLabel>
</CustomObject>