lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/fields/Exploration_Share__c.field-meta.xml
<CustomField>
    <fullName>Exploration_Share__c</fullName>
    <description>Share of the search budget reserved for exploring new or unproven segments.</description>
    <label>Exploration Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>