lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/fields/Kill_Switch__c.field-meta.xml
<CustomField>
    <fullName>Kill_Switch__c</fullName>
    <description>When checked, the weekly lead scan stops immediately without creating leads.</description>
    <label>Kill Switch</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>