lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/fields/Learning_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Learning_Enabled__c</fullName>
    <description>When checked, segment weights and the ideal customer profile are adjusted automatically.</description>
    <label>Learning Enabled</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>