lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/fields/Max_Leads_Per_Run__c.field-meta.xml
<CustomField>
    <fullName>Max_Leads_Per_Run__c</fullName>
    <description>Maximum number of leads created in one run.</description>
    <label>Max Leads Per Run</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>