lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/fields/Max_Runtime_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Max_Runtime_Minutes__c</fullName>
    <description>Maximum run time in minutes before the run stops gracefully.</description>
    <label>Max Runtime Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>