lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/fields/Max_Searches_Per_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Max_Searches_Per_Candidate__c</fullName>
    <description>Maximum number of web searches during the research of one candidate.</description>
    <label>Max Searches Per Candidate</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>