lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/fields/Max_Weight_Change__c.field-meta.xml
<CustomField>
    <fullName>Max_Weight_Change__c</fullName>
    <description>Maximum change of a segment weight per monthly evaluation.</description>
    <label>Max Weight Change</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>