lead-scan/force-app/main/default/objects/Lead_Scan_Setting__mdt/fields/Minimum_Score__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Score__c</fullName>
    <description>Minimum fit score (0-100) a candidate needs to become a lead.</description>
    <label>Minimum Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>